--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -136,7 +136,10 @@
     text-align: center;
     color:#4a90e2;
 }
-
+.login-submit-loading{
+    margin-left:195px;
+    margin-top:-34px;
+}
 
 
 
