--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -15,6 +15,7 @@
     color: #9ea0a5;
     border-top: 1px #eaedf3 solid;
     border-bottom: 1px #eaedf3 solid;
+    text-transform: uppercase;
 }
 .table-row-cell{
     padding:15px 30px 15px 30px;
