--- a/src/pages/CustomerSupport/CustomerSupport.css
+++ b/src/pages/CustomerSupport/CustomerSupport.css
@@ -3,7 +3,15 @@
     flex-direction:column;
     height:100vh;
 }
-.customer-support-title,.customer-support-panel-title{
+.customer-support-title{
+    height: 49px;
+    margin-top:25px;
+    padding-left: 32px;
+    border-bottom: 1px #e6eaee solid;
+    display: flex;
+    padding-bottom: 20px;
+}
+.customer-support-panel-title{
     height: 49px;
     margin-top:25px;
     padding-left: 32px;
@@ -120,10 +128,12 @@
     line-height: 1.5;
     text-align: center;
     color: #9ea0a5;
+    text-transform: uppercase;
 }
 .customer-support-panel-container{
     display: flex;
     flex-direction: column;
+    padding:28px;
 }
 .customer-support-panel-container-balance{
     display: flex;
@@ -158,7 +168,7 @@
     border:1px #f0f0f0 solid;
     border-radius: 5px;
 }
-.customer-support-no-result{
+.customer-support-no-result,.customer-support-to-search{
     display: flex;
     flex-direction: column;
     text-align: center;
