customer data binding

--- a/src/pages/CustomerSupport/CustomerSupport.css
+++ b/src/pages/CustomerSupport/CustomerSupport.css
@@ -120,6 +120,7 @@
     text-align: center;
     color: #3e3f42;
     padding-bottom: 7px;
+    text-transform: uppercase;
 }
 .customer-support-panel-subtitle{
     height: 18px;
