--- a/src/components/InputField/InputField.css
+++ b/src/components/InputField/InputField.css
@@ -8,6 +8,7 @@
     line-height: 1.5;
     color: #797676;
     padding-bottom:4px;
+    text-transform: uppercase;
 }
 .input-field-content{
     width: 242px;
@@ -19,6 +20,7 @@
     padding-left:12px;
     text-align: left;
     box-sizing:border-box;
+    text-transform: capitalize;
 }
 .input-field-feedback{
     font-size: 12px;
