--- a/src/pages/EditUser/EditUser.css
+++ b/src/pages/EditUser/EditUser.css
@@ -1,20 +1,20 @@
-.invite-users{
+.edit-user{
     display: flex;
     flex-direction:column;
     height:100vh;
 }
-.invite-users-title,.invite-users-panel-title{
+.edit-user-title,.edit-user-panel-title{
     height: 49px;
     margin-top:25px;
     padding-left: 32px;
     border-bottom: 1px #e6eaee solid;
     display: flex;
 }
-.invite-users-icon{
+.edit-user-icon{
     width: 20px;
     height: 20px;
 }
-.invite-users-title-text{
+.edit-user-title-text{
     width: 1076px;
     height: 28px;
     font-size: 24px;
@@ -25,7 +25,7 @@
     margin-top:-4px;
     margin-left:5px;
 }
-.invite-users-invite-btn{
+.edit-user-invite-btn{
     width: 120px;
     height: 36px;
     border-radius: 5px;
@@ -37,17 +37,17 @@
     color: white;
     margin-right:31.5px;
 }
-.invite-users-content{
+.edit-user-content{
     background-color: #fbfbfb;
     width:100%;
 }
-.invite-users-panel{
+.edit-user-panel{
     background-color: white;
     margin:30px;
     border:1px #f0f0f0 solid;
     border-radius: 5px;
 }
-.invite-users-panel-title-text{
+.edit-user-panel-title-text{
     height: 28px;
     font-size: 20px;
     font-weight: 500;
