--- a/src/pages/CustomerSupport/CustomerSupport.css
+++ b/src/pages/CustomerSupport/CustomerSupport.css
@@ -4,7 +4,7 @@
     height:100vh;
 }
 .customer-support-title{
-    height: 50px;
+    min-height: 50px;
     margin-top:21px;
     padding-left: 32px;
     border-bottom: 1px #e6eaee solid;
