--- a/src/components/InfoDialog/InfoDialog.css
+++ b/src/components/InfoDialog/InfoDialog.css
@@ -1,5 +1,5 @@
 .info-dialog-loading{
-    position:relative;
-    top:5px;
-    left:-48%;
+    margin-left:10px;
+    top: 3px;
+    position: relative;
 }
