[BO-24] duplicate user with email in popup

--- a/src/components/InfoModal/InfoModal.css
+++ b/src/components/InfoModal/InfoModal.css
@@ -36,3 +36,10 @@
     color: #43536a;
     align-self: center;
 }
+.info-modal-additional-subtitle{
+    position:relative;
+    top:40px;
+    font-size: 18px;
+    font-weight: bold;
+    color: darkred;
+}
