--- a/src/components/InputField/InputField.css
+++ b/src/components/InputField/InputField.css
@@ -21,6 +21,18 @@
     text-align: left;
     box-sizing:border-box;
 }
+.input-field-content-disabled{
+    background-color: #edeff3;
+    width: 292px;
+    height: 47px;
+    border-radius: 5px;
+    font-size: 16px;
+    color: #282e34;
+    border: solid 2px #bcbaba;
+    padding-left:12px;
+    text-align: left;
+    box-sizing:border-box;
+}
 .input-field-content-error{
     border-radius: 4px;
     border: solid 2px #d0021b !important;
